# Multi-LLM-Debate-CLI

./: README.md  pyproject.toml
src/multi_llm_debate/: main.py
